@@ -43,7 +43,6 @@ import java.util.concurrent.locks.ReentrantReadWriteLock;
 import java.util.function.Supplier;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
-import java.util.stream.Collectors;
 
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
@@ -78,14 +77,15 @@ import org.elasticsearch.monitor.jvm.JvmInfo;
 import org.elasticsearch.node.Node;
 import org.elasticsearch.rest.RestStatus;
 import org.elasticsearch.threadpool.ThreadPool;
+import org.jetbrains.annotations.VisibleForTesting;
 
 import com.carrotsearch.hppc.IntHashSet;
 import com.carrotsearch.hppc.IntSet;
 
-import org.jetbrains.annotations.VisibleForTesting;
 import io.crate.common.collections.Sets;
 import io.crate.common.exceptions.Exceptions;
 import io.crate.common.unit.TimeValue;
+import io.crate.protocols.ConnectionStats;
 import io.netty.channel.ChannelFuture;
 
 public abstract class TcpTransport extends AbstractLifecycleComponent implements Transport {
@@ -349,7 +349,7 @@ public abstract class TcpTransport extends AbstractLifecycleComponent implements
                     .limit(LIMIT_LOCAL_PORTS_COUNT)
                     .mapToObj(port -> address + ":" + port)
             )
-            .collect(Collectors.toList());
+            .toList();
     }
 
     protected void bindServer(Settings settings) {
@@ -631,11 +631,15 @@ public abstract class TcpTransport extends AbstractLifecycleComponent implements
     }
 
     protected void serverAcceptedChannel(CloseableChannel channel) {
+        statsTracker.incrementOpenChannels();
         boolean addedOnThisCall = acceptedChannels.add(channel);
         assert addedOnThisCall : "Channel should only be added to accepted channel set once";
         // Mark the channel init time
         channel.markAccessed(threadPool.relativeTimeInMillis());
-        channel.addCloseListener(ActionListener.wrap(() -> acceptedChannels.remove(channel)));
+        channel.addCloseListener(ActionListener.wrap(() -> {
+            acceptedChannels.remove(channel);
+            statsTracker.decrementOpenChannels();
+        }));
         logger.trace(() -> new ParameterizedMessage("Tcp transport channel accepted: {}", channel));
     }
 
@@ -817,18 +821,8 @@ public abstract class TcpTransport extends AbstractLifecycleComponent implements
     }
 
     @Override
-    public final TransportStats getStats() {
-        final long bytesWritten = statsTracker.getBytesWritten();
-        final long messagesSent = statsTracker.getMessagesSent();
-        final long messagesReceived = statsTracker.getMessagesReceived();
-        final long bytesRead = statsTracker.getBytesRead();
-        return new TransportStats(
-            acceptedChannels.size(),
-            messagesReceived,
-            bytesRead,
-            messagesSent,
-            bytesWritten
-        );
+    public final ConnectionStats getStats() {
+        return statsTracker.stats();
     }
 
     @Override
